[package]
name = "tictactoe"
version = "0.1.0"
authors = ["jgevirtz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.1.0"
actix-web = "1.0.2"
rand = "0.6.5"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
